--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
+  background-color: rgb(71, 7, 131);
+  align-items: center;
+  justify-content: center;
 }
 
 code {
