--- a/src/AppContent.css
+++ b/src/AppContent.css
@@ -1,15 +1,20 @@
 .container {
   display: flex;
-
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 .title {
-  background-color: burlywood;
+  text-align: center;
+  width: 100vw;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  color: white;
+  background-color: #05064b;
 }
 .table {
-    
     margin-top: 50px;
     min-width: 400px;
     max-width: 700px;
