--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
-  background-color: rgb(71, 7, 131);
+  background-color: #261a5c;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 code {
