--- a/src/AppContent.css
+++ b/src/AppContent.css
@@ -9,13 +9,12 @@
   width: 100vw;
   left: 50%;
   right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   color: white;
   background-color: #05064b;
+  padding-bottom: 10px;
 }
 .table {
-    margin-top: 50px;
-    min-width: 400px;
-    max-width: 700px;
+  margin-top: 50px;
+  min-width: 400px;
+  max-width: 700px;
 }
