--- a/src/components/RatesTable.module.css
+++ b/src/components/RatesTable.module.css
@@ -1,3 +1,10 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 table {
   border-collapse: collapse;
   width: auto;
@@ -30,6 +37,7 @@ th {
   text-align: left;
   background-color: #05064b;
   color: white;
+  cursor: pointer;
 }
 
 tr {
